Fix: logo z-index

--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -13,6 +13,8 @@
     justify-content: space-between
 
   .logo
+    position: relative
+    z-index: 100
     display: flex
     &__text
       display: block
